<resources>
    <string name="app_name">MusicFour</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">WOW</string>
    <string name="title_search">Search</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="more">More</string>
    <string name="title_personalInfo">personalInfo</string>
    <string name="title_activity_personal_info">personalInfoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comment">comment</string>
    <string name="musicList">music list</string>
    <string name="send">send</string>
    <string name="search">search for music</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="description">description</string>
    <string name="list_name">list name</string>
    <string name="requireName">Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="toRegister">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <array name="chooseGender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </array>
</resources>
